basic HotBarSystem added

--- a/index.html
+++ b/index.html
@@ -154,41 +154,41 @@
 
                     <div id="hotbarwrapper">
                         <div id="hotbar">
-                            <div id="hotbar1" class="hotbar-slot" data-hotbar-id="1">
+                            <div id="hotbar1" class="hotbar-slot" data-hotbar-id="1" data-hotbar-data="No Assignment to Key">
                                 <div class="hotbar-icon-wrapper">
                                     <img src="img/icons/empty-hotbar-slot.png" class="hotbar-icon" />
+                                    <span class="hotbar-slot-label">1</span>
                                 </div>
-                                <span class="hotbar-slot-label">1</span>
                             </div>
-                            <div id="hotbar2" class="hotbar-slot" data-hotbar-id="2">
+                            <div id="hotbar2" class="hotbar-slot" data-hotbar-id="2" data-hotbar-data="No Assignment to Key">
                                 <div class="hotbar-icon-wrapper">
                                     <img src="img/icons/empty-hotbar-slot.png" class="hotbar-icon" />
+                                    <span class="hotbar-slot-label">2</span>
                                 </div>
-                                <span class="hotbar-slot-label">2</span>
                             </div>
-                            <div id="hotbar3" class="hotbar-slot" data-hotbar-id="3">
+                            <div id="hotbar3" class="hotbar-slot" data-hotbar-id="3" data-hotbar-data="No Assignment to Key">
                                 <div class="hotbar-icon-wrapper">
                                     <img src="img/icons/empty-hotbar-slot.png" class="hotbar-icon" />
+                                    <span class="hotbar-slot-label">3</span>
                                 </div>
-                                <span class="hotbar-slot-label">3</span>
                             </div>
-                            <div id="hotbar4" class="hotbar-slot" data-hotbar-id="4">
+                            <div id="hotbar4" class="hotbar-slot" data-hotbar-id="4" data-hotbar-data="No Assignment to Key">
                                 <div class="hotbar-icon-wrapper">
                                     <img src="img/icons/empty-hotbar-slot.png" class="hotbar-icon" />
+                                    <span class="hotbar-slot-label">4</span>
                                 </div>
-                                <span class="hotbar-slot-label">4</span>
                             </div>
-                            <div id="hotbar5" class="hotbar-slot" data-hotbar-id="5">
+                            <div id="hotbar5" class="hotbar-slot" data-hotbar-id="5" data-hotbar-data="No Assignment to Key">
                                 <div class="hotbar-icon-wrapper">
                                     <img src="img/icons/empty-hotbar-slot.png" class="hotbar-icon" />
+                                    <span class="hotbar-slot-label">5</span>
                                 </div>
-                                <span class="hotbar-slot-label">5</span>
                             </div>
-                            <div id="hotbar6" class="hotbar-slot" data-hotbar-id="6">
+                            <div id="hotbar6" class="hotbar-slot" data-hotbar-id="6" data-hotbar-data="No Assignment to Key">
                                 <div class="hotbar-icon-wrapper">
                                     <img src="img/icons/empty-hotbar-slot.png" class="hotbar-icon" />
+                                    <span class="hotbar-slot-label">6</span>
                                 </div>
-                                <span class="hotbar-slot-label">6</span>
                             </div>
                         </div>
                     </div>
@@ -197,10 +197,8 @@
                 <div id="resources">
                     <div class="player-status-child"> Torches: <span id="torchCount"></span> </div><!-- set innerHTML on #torchCount -->
                     <div class="player-status-child">Heal Potions: <span id="healPotionCount"></span></div><!-- set innerHTML on #healPotionCount -->
-                    <div class="player-info-child resource">Gold: <span id="playerGold"></span></div>
-                    <div class="player-info-child resource">Speed: <span id="playerSpeed"></span>%</div>
-                    <div class="player-info-child resource">Ashen Shards: <span id="playerShards"></span></div>
-                    <!--<div class="player-info-child">Portal Bindings: <span id="portalBinding"></span></div>-->
+                    <div class="player-info-child resource">Gold: <span id="goldCount"></span></div>
+                    <div class="player-info-child resource">Ashen Shards: <span id="ashenShardCount"></span></div>
                 </div>
 
 
