character icon and journey tweaks

--- a/index.html
+++ b/index.html
@@ -68,11 +68,14 @@
 
         <div id="hud-top-left">
             <div id="player-info">
-                <div class="player-info-child player"> <span id="playerName"></span></div>
-                <div class="player-info-child level">Level: <span id="playerLevel"></span></div>
+                <div id="nameplate_icon">
+                    <img src="img/nameplate_icon.png" />
+                </div>
+                <div id="nameplate-text">
+                    <div class="player-info-child player"> <span id="playerName"></span></div>
+                    <div class="player-info-child level">Level: <span id="playerLevel"></span></div>
+                </div>
             </div>
-
-
         </div>
 
         <div id="minimap-wrapper" class="hidden">
