fixed Fog of War effect. about to convert it to a lighting system!

--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
                                
                 <div id="hud-log-window">
                     <div id="hud-log-tabs">
-                        <div class="hud-log-tab active">All</div>
-                        <div class="hud-log-tab">Combat</div>
-                        <div class="hud-log-tab">Loot</div>
-                        <div class="hud-log-tab">Journey</div>
-                        <div class="hud-log-tab">System</div>
+                        <div id="log-tab-all" class="hud-log-tab active">All</div>
+                        <div id="log-tab-combat" class="hud-log-tab">Combat</div>
+                        <div id="log-tab-loot" class="hud-log-tab">Loot</div>
+                        <div id="log-tab-journey" class="hud-log-tab">Journey</div>
+                        <div id="log-tab-system" class="hud-log-tab">System</div>
                     </div>
                     <div id="hud-log-content">
                  
