enabled the Enter Ashangal Journey path

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
 
     <div id="hud-layer" style="visibility:hidden;">
-        <div id="" style="pointer-events:none;position:fixed;top:5px;left:auto;color:#11fb40cc;background:rgba(0,0,0,0.7);padding:2px 8px;z-index:9999;font-family:monospace;font-size:.727rem;width:100%;text-align:center;">
+        <div id="" style="pointer-events:none;position:fixed;top:5px;left:auto;color:#11fb40cc;background:none;padding:2px 8px;z-index:9999;font-family:monospace;font-size:.727rem;width:100%;text-align:center;">
             <span class="zfont"> Zukarii </span>
             <span id="fps-counter">FPS: 0</span>        
         </div>
