updtaes for new item types

--- a/index.html
+++ b/index.html
@@ -373,12 +373,12 @@
                             <h2>Inventory Items</h2>
                             <div id=inventory-window-wrapper>
                                 <div id="inventory-tabs">
-                                    <button id="inventory-tab-all" class="inventory-tab-button tab" style="background: #0f0;">All</button>
+                                    <button id="inventory-tab-all" class="inventory-tab-button tab">All</button>
                                     <button id="inventory-tab-armor" class="inventory-tab-button tab">Armor</button>
-                                    <button id="inventory-tab-weapon-melee" class="inventory-tab-button tab">Melee</button>
-                                    <button id="inventory-tab-weapon-ranged" class="inventory-tab-button tab">Ranged</button>
-                                    <button id="inventory-tab-amulet" class="inventory-tab-button tab">Amulet</button>
-                                    <button id="inventory-tab-ring" class="inventory-tab-button tab">Ring</button>
+                                    <button id="inventory-tab-weapon" class="inventory-tab-button tab">Weapons</button>
+                                    <button id="inventory-tab-jewelry" class="inventory-tab-button tab">Jewelry</button>
+                                    <button id="inventory-tab-journey" class="inventory-tab-button tab">Journey</button>
+                                    <button id="inventory-tab-consumables" class="inventory-tab-button tab">Consumables</button>
                                     <button id="sort-inventory-tab" class="inventory-tab-button sort">Sort</button>
                                 </div>
 
