--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </script>
 </head>
 <body>
-    <div id="" style="pointer-events:none;position:fixed;top:5px;left:auto;color:#11fb40cc;background:none;padding:2px 8px;z-index:9999;font-family:monospace;font-size:.727rem;width:60%;text-align:center;">
+    <div id="" style="pointer-events:none;position:fixed;top:5px;left:20%;color:#11fb40cc;background:none;padding:2px 8px;z-index:200;font-family:monospace;font-size:.727rem;width:55%;text-align:left;">
         <span class="zfont"> Zukarii </span>
         <span id="fps-counter">FPS: 0</span>
     </div>
