fixed items being removed when they dontmeet use conditions

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
         <div id="dialogue-window" style="display: none;">
-            <div id="dialogue-text"></div>
+            <div id="dialogue-text" class="sharp-text"></div>
             <div id="dialogue-buttons">
                 <!-- Buttons will be dynamically added by DialogueUISystem.js -->
             </div>
@@ -150,9 +150,10 @@
                     <div id="log-tab-journey" class="hud-log-tab">Journey</div>
                     <div id="log-tab-system" class="hud-log-tab">System</div>
                 </div>
-                <div id="hud-log-content">
-
-                </div>
+                
+                    <div id="hud-log-content" class="sharp-text">
+                    </div>
+           
             </div>
 
             <div id="xp-hotbars">
@@ -316,11 +317,11 @@
 
                 <div id="character-content" class="ui-tab">
                     <div id="character">
-                        <div class="flex-container" style="flex:40;">
+                        <div class="flex-container" style="flex:42;">
                             <h2>Character Stats</h2>
                             <div id="character-stat-wrapper"></div>
                         </div>
-                        <div class="flex-container" style="flex:60;">
+                        <div class="flex-container" style="flex:58;">
                             <h2>Equipped Items</h2>
                             <div id="equipped-items">
                                 <div class="col">
